# restaurant-ops-hub

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.web  LAUNCH.md  README.md  alembic.ini  amplify.yml  apprunner.yaml  aws-infrastructure.yaml  deploy-aws.sh  docker-compose.yml  production.env  pyproject.toml  quick-deploy.sh  setup.py  simple_api.py  test_api.py
apps/api/: .env.example  __init__.py  adapter_registry.py  config.py  main.py  schemas.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web/app/brief/: page.tsx
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Layout.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: Admin.tsx  Brief.tsx  Changes.tsx  Dashboard.tsx  Inventory.tsx  Reviews.tsx
apps/worker/: __init__.py  main.py
infra/db/: comprehensive_seed.sql  corrected_seed.sql  current_seed.sql  expanded_seed.sql  final_seed.sql  seed.sql  simple_seed.sql  working_seed.sql
infra/db/migrations/: env.py
infra/db/migrations/versions/: 001_initial_migration.py
tests/: test_api_contract.py  test_core_services.py
