[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-hub"
version = "0.1.0"
description = "Restaurant Ops Hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "python-dotenv",
  "pandas",
  "sqlalchemy[postgresql]",
  "alembic",
  "psycopg2-binary",
  "asyncpg",
  "httpx",
  "jinja2",
  "weasyprint",
  "python-multipart",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "redis",
  "celery",
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
include = ["*"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]